--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "sm-pipelines-oo-examples"
+name = "my-project"  # Should match repo name. Convention is to use hyphens instead of underscores.
 version = "0.0.1"
-description = "Sagemaker Pipelines OO Examples"
-authors = ["Thomas Loeber <thomas.loeber73@gmail.com>"]
-license = "MIT"
-packages = [{ include = "smp_oo_examples", from = "src" }]
+description = ""
+authors = ["team name <team@email.com>"]
+license = ""
+packages = [{ include = "my_project", from = "src" }]  # Update `include` after renaming the package folder
 
 [[tool.poetry.source]]
 name = "PyPI"
@@ -14,25 +14,14 @@ priority = "primary"
 pythonpath = ["src"]
 
 [tool.poetry.dependencies]
-python = ">=3.10, <3.12"
-sm-pipelines-oo = { path = "..", develop = true }  # *Editable* install of our main package
+python = "3.11"  # If this is a library, specify version *range* instead
+# Python packages will be added here if running poetry install <package>
+# Add *local* packages here, if any:
+# my-local-package = { path = "..", develop = true }  # `develop` makes install *editable*
 
-# Need to explicitly specify dev packages for library in examples package again (they are not passed through from dependency)
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.4.0"
-pylint = "^2.17.4"
-black = "^23.3.0"
-pytest = "^7.3.2"
-matplotlib = "^3.7.1"
-ipykernel = "*"
-nb-mypy = "^1.0.5"
-boto3-stubs = {extras = ["essential", "sagemaker", "sagemaker-runtime", "sts"], version = "^1.34.2"}
-types-pillow = "^10.1.0.2"
-types-openpyxl = "^3.1.0.32"
-types-requests = "^2.31.0.10"
-pyarrow-stubs = "^10.0.1.7"
-types-pyyaml = "^6.0.12.12"
-ipytest = "^0.14.0"
+# mypy, pylint, black, pytest, behave,
+# matplotlib, ipykernel, nb-mypy, ipytest
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
