Add python configs from my utils_and_configs repo.
https://github.com/tloeber/utils_and_configs/tree/a6cad128782ef43eecda82b3defdc0dbc77403dd/python

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,6 @@ python = "3.11"  # If this is a library, specify version *range* instead
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 100
