Misc small tweaks.
Amongst other, adapt to use of autoenv.

--- a/terraform/.env.template
+++ b/terraform/.env.template
@@ -5,4 +5,6 @@ TF_CLOUD_ORGANIZATION=""
 
 # *Derived* variables
 # ====================
-TF_CLOUD_WORKSPACE="${PROJECT_NAME}-${ENV}"
+# Note: Starting with Terraform v1.7, TF_WORKSPACE will be renamed to TF_CLOUD_WORKSPACE.
+# See https://developer.hashicorp.com/terraform/cli/v1.6.x/cloud/settings#the-cloud-block
+TF_WORKSPACE="${PROJECT_NAME}-${ENV}"
